Fix: Input overlapping with search icon

--- a/source/style/_theme/nav.less
+++ b/source/style/_theme/nav.less
@@ -23,8 +23,9 @@
 			.transition(all 250ms @easing 00ms);
 			.transform(translate3d(25%,0,0));
 
-			width: 100%;
 			height: 100%;
+			padding-left: 2.5em !important;
+			width: 100%;
 
 			@media screen and (min-width: @breakpoint) {
 				font-size: 1rem !important;
